# api-radiography-flask

./: .env.example  .gitignore  Procfile  README.md  alembic.ini  flake.nix  pyproject.toml  requirements.txt
.github/agents/: radiography-api.agent.md
.github/skills/concise-output/: SKILL.md
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  scheduler.py  security.py
app/models/: user.py  xray_record.py
app/repositories/: user_repository.py  xray_repository.py
app/routers/: auth_router.py  radiographs_router.py  xray_router.py
app/schemas/: xray_schema.py
app/services/: auth_service.py  cloudinary_service.py  xray_service.py
docs/: examen-parte-1.md  pendientes-examen-parte-1.md
migrations/: env.py
migrations/versions/: 93f1a2b4c5d6_create_users_table.py  b5112f27c258_update_xray_records_constraints.py  e6f4c1a0b9d2_add_patient_identifier_and_require_minimum_fields.py
