[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-radiography-flask"
version = "0.1.0"
description = "Radiography API with Flask, SQLAlchemy, JWT, Cloudinary and Swagger"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Flask==3.0.3",
  "flask-cors==4.0.0",
  "Flask-SQLAlchemy==3.1.1",
  "alembic==1.13.1",
  "pydantic==2.7.0",
  "Authlib==1.3.0",
  "PyJWT==2.8.0",
  "requests==2.31.0",
  "cloudinary==1.39.1",
  "python-dotenv==1.0.1",
  "Werkzeug==3.0.2",
  "flasgger==0.9.7.1",
  "gunicorn==22.0.0",
]

optional-dependencies = { dev = ["uv==0.11.7"] }

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]
